[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://images/card_back.jpg" type="Texture" id=2]
[ext_resource path="res://images/bg2.png" type="Texture" id=3]
[ext_resource path="res://Controls.gd" type="Script" id=4]
[ext_resource path="res://Spinner.gd" type="Script" id=5]
[ext_resource path="res://images/loading.png" type="Texture" id=6]
[ext_resource path="res://images/card_loading.jpg" type="Texture" id=7]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.254902 )

[node name="Scryfall" type="HTTPRequest" parent="."]

[node name="CardDownload" type="HTTPRequest" parent="."]

[node name="CardImageBack" type="TextureRect" parent="."]
visible = false
margin_left = 640.0
margin_top = 45.0
margin_right = 1312.0
margin_bottom = 981.0
rect_scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 2 )

[node name="CardImageFront" type="TextureRect" parent="."]
margin_left = 640.0
margin_top = 45.0
margin_right = 1312.0
margin_bottom = 981.0
rect_scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 2 )

[node name="CardLoading" type="TextureRect" parent="."]
visible = false
margin_left = 640.0
margin_top = 45.0
margin_right = 1312.0
margin_bottom = 981.0
rect_scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 7 )

[node name="Spinner" type="Sprite" parent="CardLoading"]
position = Vector2( 336, 468 )
scale = Vector2( 1.98807, 1.98807 )
texture = ExtResource( 6 )
script = ExtResource( 5 )

[node name="Controls" type="Control" parent="."]
margin_left = 24.0
margin_top = 75.0
margin_right = 617.0
margin_bottom = 526.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="Controls"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.137255, 0.137255, 0.137255, 0.784314 )

[node name="GetCard" type="Button" parent="Controls"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 87.0
margin_top = -156.0
margin_right = 172.0
margin_bottom = -131.0
text = "Get Card"

[node name="Grid" type="GridContainer" parent="Controls"]
margin_left = 22.0
margin_top = 64.0
margin_right = 235.0
margin_bottom = 225.0
custom_constants/vseparation = 20
custom_constants/hseparation = 8
columns = 2

[node name="ManaLabel" type="Label" parent="Controls/Grid"]
margin_top = 5.0
margin_right = 73.0
margin_bottom = 19.0
text = "Mana Value"
align = 2
valign = 1

[node name="ManaControls" type="HBoxContainer" parent="Controls/Grid"]
margin_left = 81.0
margin_right = 215.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="CheckButton" type="CheckBox" parent="Controls/Grid/ManaControls"]
margin_right = 52.0
margin_bottom = 24.0
pressed = true
text = "Any"

[node name="ManaValue" type="SpinBox" parent="Controls/Grid/ManaControls"]
margin_left = 60.0
margin_right = 134.0
margin_bottom = 24.0
size_flags_vertical = 4
max_value = 16.0
editable = false

[node name="ColorLabel" type="Label" parent="Controls/Grid"]
margin_top = 47.0
margin_right = 73.0
margin_bottom = 61.0
text = "Color"
align = 2

[node name="Color" type="OptionButton" parent="Controls/Grid"]
margin_left = 81.0
margin_top = 44.0
margin_right = 215.0
margin_bottom = 64.0
size_flags_vertical = 4
text = "Color"

[node name="TypeLabel" type="Label" parent="Controls/Grid"]
margin_top = 87.0
margin_right = 73.0
margin_bottom = 101.0
text = "Card Type"
align = 2
valign = 1

[node name="Type" type="OptionButton" parent="Controls/Grid"]
margin_left = 81.0
margin_top = 84.0
margin_right = 215.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Type"

[node name="RarityLabel" type="Label" parent="Controls/Grid"]
margin_top = 127.0
margin_right = 73.0
margin_bottom = 141.0
text = "Rarity"
align = 2
valign = 1

[node name="Rarity" type="OptionButton" parent="Controls/Grid"]
margin_left = 81.0
margin_top = 124.0
margin_right = 215.0
margin_bottom = 144.0
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Rarity"

[node name="SetContainer" type="VBoxContainer" parent="Controls"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -340.0
margin_top = -178.5
margin_right = -16.0
margin_bottom = 194.5

[node name="SetLabel" type="Label" parent="Controls/SetContainer"]
margin_right = 324.0
margin_bottom = 14.0
text = "Set"
align = 1

[node name="SetList" type="ItemList" parent="Controls/SetContainer"]
margin_top = 18.0
margin_right = 324.0
margin_bottom = 373.0
size_flags_horizontal = 3
size_flags_vertical = 3
same_column_width = true

[node name="Title" type="Label" parent="Controls"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -98.5
margin_top = 19.0
margin_right = 98.5
margin_bottom = 33.0
text = "Trailblazer Card Generator"
align = 1

[node name="CopyCard" type="Button" parent="Controls"]
margin_left = 52.0
margin_top = 332.0
margin_right = 208.0
margin_bottom = 356.0
text = "Copy Card to Clipboard"

[node name="Flip" type="Button" parent="Controls"]
visible = false
margin_left = 775.0
margin_top = 492.0
margin_right = 842.0
margin_bottom = 512.0
text = "Flip Card"

[node name="Fail" type="Label" parent="."]
visible = false
margin_left = 160.0
margin_top = 538.0
margin_right = 480.0
margin_bottom = 557.0
custom_colors/font_color = Color( 1, 0.403922, 0.403922, 1 )
text = "Failed to find a card with the specified parameters"

[connection signal="pressed" from="Controls/GetCard" to="." method="_on_button_pressed"]
[connection signal="toggled" from="Controls/Grid/ManaControls/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="toggled" from="Controls/Grid/ManaControls/CheckButton" to="Controls" method="_on_CheckButton_toggled"]
[connection signal="pressed" from="Controls/CopyCard" to="." method="_on_CopyCard_pressed"]
[connection signal="pressed" from="Controls/Flip" to="." method="_on_Flip_pressed"]
